projeto terminado co  sucesso.

--- a/horadoDia/index.html
+++ b/horadoDia/index.html
@@ -12,12 +12,13 @@
       <h1>Hora do dia</h1>
     </header>
     <section>
-      <div>Vamos verificar a hora do dia</div>
       <div id="res">
+        <p>Vamos verificar a hora do dia</p>
         <p>
           <input type="button" value="verificar" onclick="verificaHora()" />
         </p>
       </div>
+      <div id="photo"></div>
       <div id="tempo"></div>
     </section>
     <footer>&copy;AndreGomes</footer>
