--- a/analisadorDeNumeros/index.html
+++ b/analisadorDeNumeros/index.html
@@ -13,18 +13,15 @@
     </header>
     <section>
       <div>
+        Numero entre(1 e 100)
         <p>
-          Numero:
-          <input type="number" id="mult" />
-          <input type="button" value="Gerar Tabuada" onclick="tabuada()" />
+          <input type="number" id="addnumber" />
+          <input type="button" value="Adcionar" onclick="analisaNumero()" />
         </p>
+        <select name="analiseNumero" id="guaNumero" size="10"></select>
+        <input type="button" value="Finalizar" onclick="finalizar()" />
       </div>
-
-      <div>
-        <select name="tabuada" id="seltab" size="10">
-          <option>Digite o numero acima</option>
-        </select>
-      </div>
+      <div id="res"></div>
     </section>
     <footer>&copy;AndreGomes</footer>
     <script src="script.js"></script>
